# WindowsReadMediaInfo

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
