[package]
name = "mediainfo"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48.0", features = [
    "Media",
    "Storage",
    "Storage_Streams",
    "Media_Control",
    "Foundation"
    
]}
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "rt"] }
